@@ -1,12 +1,14 @@
 package com.exampleinyection.clase2parte2.service;
 
+import com.exampleinyection.clase2parte2.exception.InvalidUserException;
+import com.exampleinyection.clase2parte2.exception.UserNotFoundException;
 import com.exampleinyection.clase2parte2.model.User;
 import lombok.Getter;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Getter
@@ -16,6 +18,7 @@ public class UserService {
     private long nextId = 1;
 
     public User saveUser(User user) {
+
         User newUser = new User(
                 nextId++,
                 user.getNombre(),
@@ -30,7 +33,7 @@ public class UserService {
         return users.stream()
                 .filter(user -> user.getId().equals(id))
                 .findFirst()
-                .orElseThrow(() -> new RuntimeException("User not found with id: " + id));
+                .orElseThrow(() -> new UserNotFoundException("No existe el usuario con id: " + id));
     }
 
     public void deleteUser(Long id) {
@@ -50,14 +53,29 @@ public class UserService {
 
     public List<User> searchByName(String nombre) {
         return users.stream()
-                .filter(user -> user.getNombre() != null &&
-                        user.getNombre().equalsIgnoreCase(nombre))
-                .collect(Collectors.toList());
+                .filter(user -> StringUtils.containsIgnoreCase(user.getNombre(), nombre))
+                .toList();
     }
 
     public List<User> saveMultipleUsers(List<User> newUsers) {
         return newUsers.stream()
                 .map(this::saveUser)
+                .toList();
+    }
+
+    public List<User> getPaginatedUsers(int page, int size) {
+        if (page < 1) {
+            page = 1;
+        }
+        if (size < 1) {
+            size = 1;
+        }
+
+        int skip = (page - 1) * size;
+
+        return users.stream()
+                .skip(skip)
+                .limit(size)
                 .toList();
     }
 }
